--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-
-        android:id="@+id/homePageDice"
-        android:layout_width="217dp"
-        android:layout_height="154dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="163dp"
-        android:layout_marginEnd="97dp"
-        android:layout_marginBottom="414dp"
-        app:srcCompat="@drawable/homescreen_dice" />
-
     <LinearLayout
+        android:id="@+id/gameControllers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/homePageDice"
         android:layout_centerInParent="true"
         android:layout_marginTop="-360dp"
         android:gravity="center"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/homePageDice"
+            android:layout_width="217dp"
+            android:layout_height="154dp"
+            app:srcCompat="@drawable/homescreen_dice"
+            android:layout_marginBottom="30dp"/>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Game Target" />
+
+        <EditText
+            android:id="@+id/inputTargetScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20sp"
+            android:ems="4"
+            android:gravity="center"
+            android:hint="101"
+            android:inputType="number"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/btnNewGame"
