Game optimized for the landscape mode.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Gray">#353535</color>
+    <color name="DefaultDark">#0E0E0E</color>
 </resources>
