--- a/app/src/main/res/layout-land/activity_game_screen.xml
+++ b/app/src/main/res/layout-land/activity_game_screen.xml
@@ -35,7 +35,7 @@
                     android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_1"
+                    app:srcCompat="@drawable/die_1_img"
                     tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
 
                 <ImageButton
@@ -46,7 +46,7 @@
                     android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_2" />
+                    app:srcCompat="@drawable/die_2_img" />
 
                 <ImageButton
                     android:id="@+id/ibtnHuman3"
@@ -56,7 +56,7 @@
                     android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_3" />
+                    app:srcCompat="@drawable/die_3_img" />
 
                 <ImageButton
                     android:id="@+id/ibtnHuman4"
@@ -66,7 +66,7 @@
                     android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_4" />
+                    app:srcCompat="@drawable/die_4_img" />
 
                 <ImageButton
                     android:id="@+id/ibtnHuman5"
@@ -76,7 +76,7 @@
                     android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_5" />
+                    app:srcCompat="@drawable/die_5_img" />
 
                 <TextView
                     android:id="@+id/tvHumanScore"
@@ -105,7 +105,7 @@
                     android:contextClickable="false"
                     android:longClickable="false"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_1" />
+                    app:srcCompat="@drawable/die_1_img" />
 
                 <ImageButton
                     android:id="@+id/ibtnComputer2"
@@ -118,7 +118,7 @@
                     android:contextClickable="false"
                     android:longClickable="false"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_2" />
+                    app:srcCompat="@drawable/die_2_img" />
 
                 <ImageButton
                     android:id="@+id/ibtnComputer3"
@@ -131,7 +131,7 @@
                     android:contextClickable="false"
                     android:longClickable="false"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_3" />
+                    app:srcCompat="@drawable/die_3_img" />
 
                 <ImageButton
                     android:id="@+id/ibtnComputer4"
@@ -144,7 +144,7 @@
                     android:contextClickable="false"
                     android:longClickable="false"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_4" />
+                    app:srcCompat="@drawable/die_4_img" />
 
                 <ImageButton
                     android:id="@+id/ibtnComputer5"
@@ -157,7 +157,7 @@
                     android:contextClickable="false"
                     android:longClickable="false"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/die_5" />
+                    app:srcCompat="@drawable/die_5_img" />
 
                 <TextView
                     android:id="@+id/tvComputerScore"
