--- a/app/src/main/res/layout-land/activity_game_screen.xml
+++ b/app/src/main/res/layout-land/activity_game_screen.xml
@@ -167,22 +167,31 @@
                     android:gravity="center"
                     android:text="-"
                     android:textSize="24sp" />
+
             </LinearLayout>
 
             <LinearLayout
-                android:gravity="center"
-                android:layout_marginLeft="20dp"
-                android:layout_width="250dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+
+                android:gravity="center"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/winLossCount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:gravity="center"
+                    android:text="H:0/C:0" />
 
                 <LinearLayout
                     android:id="@+id/targetScore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/textView2"
@@ -212,8 +221,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        >
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/tvHuman"
@@ -268,10 +276,10 @@
 
 
                 <LinearLayout
-                    android:paddingTop="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingTop="20dp">
 
                     <Button
                         android:id="@+id/btnThrow"
