--- a/app/src/main/res/layout-land-night/activity_main.xml
+++ b/app/src/main/res/layout-land-night/activity_main.xml
@@ -30,6 +30,15 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/homeWinLossCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:text="H:0/C:0"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
