--- a/app/src/main/res/layout-night/activity_game_screen.xml
+++ b/app/src/main/res/layout-night/activity_game_screen.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_100"
-    android:gravity="center">
+    android:gravity="center"
+    >
 
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        tools:context=".GameScreen">
+        tools:context=".GameScreen"
+        android:gravity="center">
 
         <LinearLayout
 
@@ -30,7 +30,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="H:0/C:0"
-                android:textColor="@color/DefaultDark"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -44,7 +43,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="You"
-                    android:textColor="@color/DefaultDark"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -53,7 +51,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="-"
-                    android:textColor="@color/DefaultDark"
                     android:textSize="16sp" />
 
                 <Space
@@ -74,7 +71,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Computer"
-                    android:textColor="@color/DefaultDark"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -83,7 +79,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="-"
-                    android:textColor="@color/DefaultDark"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -94,18 +89,17 @@
             android:id="@+id/targetScore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/scoreBoard"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_below="@id/scoreBoard">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Target Score"
-                android:textColor="@color/DefaultDark"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -114,7 +108,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textColor="@color/DefaultDark"
                 android:textSize="24sp" />
         </LinearLayout>
 
@@ -122,11 +115,11 @@
             android:id="@+id/diceColumns"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/targetScore"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="10dp"
             android:gravity="center|center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_below="@id/targetScore">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -138,7 +131,7 @@
                     android:layout_width="200dp"
                     android:layout_height="70dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/purple_200"
+                    android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/die_1_img"
@@ -149,7 +142,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/purple_200"
+                    android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/die_2_img" />
@@ -159,7 +152,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/purple_200"
+                    android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/die_3_img" />
@@ -169,7 +162,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/purple_200"
+                    android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/die_4_img" />
@@ -179,7 +172,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/purple_200"
+                    android:backgroundTint="@color/Gray"
                     android:contentDescription="@string/die_for_human"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/die_5_img" />
@@ -280,8 +273,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/diceColumns"
-            android:layout_centerHorizontal="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true">
 
             <Button
                 android:id="@+id/btnThrow"
