--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_100"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -20,8 +19,8 @@
             android:id="@+id/homePageDice"
             android:layout_width="217dp"
             android:layout_height="154dp"
-            android:layout_marginBottom="30dp"
-            app:srcCompat="@drawable/homescreen_dice_dark" />
+            app:srcCompat="@drawable/homescreen_dice"
+            android:layout_marginBottom="30dp"/>
 
         <TextView
             android:id="@+id/homeWinLossCount"
@@ -29,15 +28,13 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="H:0/C:0"
-            android:textColor="@color/DefaultDark"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Game Target"
-            android:textColor="@color/DefaultDark" />
+            android:text="Game Target" />
 
         <EditText
             android:id="@+id/inputTargetScore"
@@ -48,9 +45,6 @@
             android:gravity="center"
             android:hint="101"
             android:inputType="number"
-            android:textColor="@color/DefaultDark"
-            android:textColorHighlight="@color/purple_150"
-            android:textColorLink="@color/purple_100"
             android:textSize="20sp" />
 
         <Button
@@ -59,10 +53,8 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:text="New Game"
-            android:textColor="@color/Gray"
             app:icon="@android:drawable/ic_media_play"
-            app:iconSize="15sp"
-            app:iconTint="@color/DefaultDark" />
+            app:iconSize="15sp" />
 
         <Button
             android:id="@+id/btnInfo"
@@ -71,10 +63,8 @@
             android:layout_marginTop="15dp"
             android:backgroundTint="@color/white"
             android:text="Info"
-            android:textColor="@color/DefaultDark"
             app:icon="@android:drawable/ic_dialog_info"
-            app:iconSize="12sp"
-            app:iconTint="@color/DefaultDark" />
+            app:iconSize="12sp" />
 
     </LinearLayout>
 
